--- a/mproj.tex
+++ b/mproj.tex
@@ -21,6 +21,7 @@
 %\usepackage{fancyvrb}
 %\usepackage[final]{pdfpages}
 \usepackage{CTEX}
+\usepackage{comment}
 
 \begin{document}
 
@@ -69,24 +70,27 @@ YewPar旨在允许非专业用户从并行中受益;
 重用编码为算法骨架的并行搜索模式(to reuse parallel search patterns encoded as algorithmic
 skeletons);并能在多个并行架构上运行。
 
+与此同时,随着并行计算和多核处理器的普及,有效的任务调度变得越来越重要.
 能并行加速搜索是YewPar的一个关键特性,这是通过各个节点的多个worker在本地任务池无任务时向其它节点的任务池窃取任务来实现节点空闲资源的利用。
 而YewPar在本地任务池无任务时,是随机选取节点来窃取任务的,
 其中Workstealing是一种被广泛研究和应用的并行调度策略,
 它允许空闲的处理器从繁忙的处理器中“窃取”任务。
 然而,很多如YewPar这样的workstealing调度器往往采用偏随机窃取的策略,
 这往往会导致不必要的开销和延迟,浪费了大量试探窃取任务的时间,同时导致各节点的相对负载不均衡,延长了最终完成的时间。
+目前也有很多关于workstealing的改进,但是不能很好的兼顾到低开销,去中心化,高负载均衡,高性能,高可扩展性等特性.
 
 
-与此同时,随着并行计算和多核处理器的普及,有效的任务调度变得越来越重要.
 相比之下,本文提出了Performance-Driven Workstealing Policy,
-它能够搜集多项性能指标,如各节点的任务执行时间、处理器的工作/空闲时间比例和任务池获取的耗时,
+它能够以低成本搜集多项性能指标,如各节点的任务执行时间、处理器的工作/空闲时间比例和任务池获取的耗时,
 并通过自研的Time-Optimized Workstealing Strategy算法计算出最优窃取目标节点并缓存和定时刷新,
-当有worker空闲时便能直接从缓存获取最近一段时间的最优窃取目标,从而能缩短完成全部任务所需的时间.
+当有worker空闲时便能直接从缓存获取最近一段时间的最优窃取目标,从而能很好的在多节点去中心化的环境下以较低成本缩短完成全部任务所需的时间.
 
 
 本文剖析了具体的设计与实现细节,
-其中Performance-Driven Workstealing Policy在搜集性能参数时采用了平台无关设计,
-并不涉及具体的系统参数调用命令,而是从YewPar内部和底层的HPX\cite{10.1145/2676870.2676883}框架进行数据收集,从而能够在不同的硬件平台上正常运行.
+其中Performance-Driven Workstealing Policy在搜集性能参数时采用了平台无关与去中心化的设计,
+一方面并不涉及具体的系统参数调用命令,而是从YewPar内部和底层的HPX\cite{10.1145/2676870.2676883}框架进行数据收集,从而能够在不同的硬件平台上正常运行;
+另一方面没有单一的节点负责收集所有节点的性能参数,而是各节点各自收集本地的性能参数,并通过HPX的分布式通信机制分享本地处理后的数据,
+同时获取其它节点数据进行本地最优窃取目标计算,从而避免了单一节点的性能瓶颈.
 其中Time-Optimized Workstealing Strategy的核心思想是计算各节点执行本地任务的所需时间的预期和获取节点任务池任务的耗时的预期,
 并优先选取所需时间预期最大的节点同时尽量缩短不必要的获取任务的额外耗时,从而降低各节点的worker空闲率的同时缩短完成全部任务所需的时间.
 其中定时刷新最优窃取目标缓存的任务由一种动态调整刷新时间的自动刷新任务来主要负责,各节点都会部署一个这样的刷新器,
@@ -97,47 +101,96 @@ skeletons);并能在多个并行架构上运行。
 
 本文同时对改进workstealing策略后的YewPar进行了评估,
 评估在具有多核机器的Beowulf集群上进行,
-结果表明,改进后的YewPar在不同节点数量和线程下相比原YewPar平均能够获得更好的性能,能在不影响搜索结果的情况下不同程度的缩短执行完全部任务所需的时间.
+结果表明,改进后的YewPar在不同节点数量和线程下相比原YewPar平均能够获得更好的性能,
+能在不影响搜索结果的情况下不同程度的有效缩短执行完全部任务所需的时间.
 
-\section{A section}
-
-\subsection{A subsection}
-Please note your proposal need not follow the included section headings - this is only a suggested structure. Also add subsections etc as required.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Survey}\label{survey}
 
-Background concepts (if required) and overview of relevant previous work (critically evaluate strengths and weaknesses).
+\section{组合搜索}
+\begin{comment}
+在计算机科学和人工智能中,组合搜索是一种用于在给定的搜索空间中找到解决方案的方法。
+经典的组合搜索问题包括解决八皇后难题或评估具有大型游戏树的游戏中的动作，例如黑白棋或国际象棋。
+这种搜索特别适用于那些解空间巨大并且不可能穷举所有解决方案的问题。
+一些算法保证找到最优解，而另一些算法可能只返回在已探索的状态空间部分中找到的最佳解。
+通过分支与限界技术或采用启发式方法，组合搜索能够有效地减少搜索空间，并更快地找到解决方案。
+\end{comment}
 
+\subsection{并行组合搜索(Parallel Combinatorial Search)}
+随着现代计算机硬件的发展,特别是多核处理器和分布式系统的普及,
+利用并行性来加速组合搜索已经成为研究的热点.
+并行组合搜索的目标是将搜索空间分解成多个部分,以便可以在多个处理单元上同时执行,从而加速解决方案的发现。
 
-组合搜索的历史和发展:简要回顾组合搜索的发展历史，特别是精确组合搜索的发展,并大致介绍YewPar.
-并行调度的历史和发展:简要回顾并行调度策略的发展,特别是workstealing方法.
-现有的workstealing方法:详细描述当前的workstealing调度方法和它们的特点,并介绍YewPar所采用的workstealing方法.
-现有方法的局限性：基于文献，讨论传统方法的限制和挑战。
-相关的优化方法:回顾过去的研究中,针对workstealing或类似问题所做的优化尝试。
-研究空白:指出历史针对workstealing的不足或者空白,和YewPar的workstealing的不足.
-(过去的workstealing只在某种方面进行了优化尝试,而YewPar则只通过了随机策略进行窃取,本文将结合历史工作窃取思路更进一步,在YewPar上进行改进)
+YewPar是一个专为组合搜索设计的并行框架.
+它提供了一套强大的工具和策略,允许开发者轻松地并行化他们的搜索算法.
+YewPar的主要特点是其灵活性和可扩展性,使其能够应对各种复杂的搜索场景.
+其中,workstealing是YewPar中用于任务调度的核心策略,
+它允许处理器在本地任务队列为空时从其他处理器窃取任务,确保所有处理器都能保持忙碌,从而提高整体性能。
 
-先介绍组合搜索背景,引出YewPar
-然后介绍workstealing的背景,引出YewPar中的workstealing,并指出其存在的问题
-之后引出本文的工作,即改进YewPar中的workstealing
+\section{workstealing}
+Workstealing 是并行编程中的一个核心概念。
+其主要优点在于分散调度,让每个处理器自主地管理其任务队列,从而显著降低了全局同步所带来的开销.
+众多并行框架和库,如 Cilk、TBB 和 OpenMP,都已经采纳了这种方法。
 
-Workstealing 是并行编程中的一个核心概念，最早由 [引用] 提出。
-这种方法的优势在于其分散的性质，每个处理器都独立地管理自己的任务队列，从而减少了全局同步的开销。
-多年来，这种方法已被广泛应用于各种并行框架和库中，如 Cilk、TBB 和 OpenMP。
+在workstealing策略中,系统内的每个处理器都有自己的待执行任务队列.
+每个任务都由一系列指令组成,这些指令需要按顺序执行。
+但在执行的过程中,一个任务还可能生成新的子任务.
+这些子任务被初步放入生成它们的任务所在的处理器队列.
+当某处理器的任务队列为空时,它会尝试从其他处理器的队列中“窃取”任务.
+这样,workstealing 实际上将任务调度到了空闲的处理器上,
+并保证了只有在所有处理器都繁忙时才会发生调度开销.\cite{10.1145/1248377.1248396}
 
-尽管 workstealing 已被证明是一种高效的调度策略,但仍有许多研究致力于进一步优化其性能。
-例如,Archibald 等人在 YewPar 框架中提出了一个针对精确组合搜索的并行框架，但它仍然采用了传统的随机窃取策略。
+与workstealing形成对比的是工作共享策略,
+它是动态多线程调度的另一种方法。
+在工作共享中,新产生的任务会被立即调度到一个处理器上执行。
+相较于此,workstealing减少了处理器间的任务迁移,因为当所有处理器都繁忙时,这种迁移是不会发生的.\cite{10.1145/324133.324234}
 
-随机窃取策略的一个主要问题是它可能导致不必要的任务迁移和延迟，尤其是在不均匀的任务分布下。
-近年来，有一些研究开始考虑使用历史信息和运行时指标来指导窃取决策，从而提高调度的效率和性能 [相应的引用]。
+尽管如此,传统的随机窃取策略在多节点复杂环境中往往有较大的开销.
+这些开销主要来源于“窃贼”在集群中随机地探测节点以寻找“受害者”.
+加之集群规模的不均匀分布,这种问题变得更为严重,
+导致系统消息量过大以及“窃贼”由于多次窃取失败和网络延迟而产生的长时间饥饿状态.
+尽管关于workstealing的优化尝试从未停歇,
+例如通过建立固定的通道来匹配任务饥饿和任务丰富的节点\cite{10.1145/3016078.2851175},
+但至今仍未有一种通用的去中心化、低开销、跨平台且高效的策略出现。
+workstealing仍处于针对各种应用环境进行持续优化的阶段。
+
+\section{为什么要在YewPar中设计并使用新的workstealing策略}
+
+虽然YewPar已经采用workstealing作为其核心的调度策略,
+但随机发现一个有任务的节点并一直窃取其任务的方法可能导致不必要的开销和计算资源的空闲,
+尤其是在不均匀的任务分布和各节点具有不均衡的计算资源下.
+考虑到组合搜索的特性,任务之间可能存在巨大的执行时间差异,这使得随机窃取策略可能并不是最优选择。
+
+为了更好地利用每个处理器的计算能力并减少不必要的通信开销,
+YewPar需要一种更加智能的workstealing策略。
+基于各节点性能的新的Performance-Driven Workstealing Policy正是为了解决这一问题而提出的。
+通过低成本评估每个节点的性能如平均任务执行时间等,新策略可以更精确地刷新最优窃取目标,从而提高整体性能。
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Design and implementation}
 
-The content of these chapters depends on the project and should be agreed with your supervisor (e.g. description of the solution, evaluation results, etc).
+\section{性能数据收集与传输}
+数据收集包含三部分:各节点负载情况,各节点剩余任务量,各节点获取任务池任务的耗时.
+这三个参数将会为后续的最优窃取目标计算提供有力的数据支持.
+同时,为了保障能以较低成本收集到更有效的数据,本文对三部分都进行了仔细的设计与优化.
 
+\subsection{节点所有worker的负载情况}
+
+
+\subsection{各节点剩余任务量收集}
+
+\subsection{当前节点获取各节点任务池数据所需时间收集}
+
+
+\section{最优窃取目标计算}
+
+\section{刷新最优窃取目标缓存}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Evaluation}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Conclusion}\label{conclusion}
