图片格式加入

--- a/mproj.bib
+++ b/mproj.bib
@@ -125,3 +125,20 @@
   numpages   = {2},
   keywords   = {irregular applications, scheduling, work-stealing}
 }
+
+@inproceedings{10.1007/978-3-030-29400-7_14,
+  author    = {Archibald, Blair and Maier, Patrick and Stewart, Robert and Trinder, Phil},
+  title     = {Implementing YewPar: A Framework for Parallel Tree Search},
+  year      = {2019},
+  isbn      = {978-3-030-29399-4},
+  publisher = {Springer-Verlag},
+  address   = {Berlin, Heidelberg},
+  url       = {https://doi.org/10.1007/978-3-030-29400-7_14},
+  doi       = {10.1007/978-3-030-29400-7_14},
+  abstract  = {Combinatorial search is central to many applications yet hard to parallelise. We argue for improving the reuse of parallel searches, and present the design and implementation of a new parallel search framework. YewPar generalises search by abstracting search tree generation, and by providing algorithmic skeletons that support three search types, together with a set of search coordination strategies. The evaluation shows that the cost of YewPar generality is low (6.1%); global knowledge is inexpensively shared between workers; irregular tasks are effectively distributed; and YewPar delivers good runtimes, speedups and efficiency with up to 255 workers on 17 localities.},
+  booktitle = {Euro-Par 2019: Parallel Processing: 25th International Conference on Parallel and Distributed Computing, G\"{o}ttingen, Germany, August 26–30, 2019, Proceedings},
+  pages     = {184-196},
+  numpages  = {13},
+  keywords  = {Parallel search, Exact combinatorial search, HPX},
+  location  = {G\"{o}ttingen, Germany}
+}
