--- a/mproj.tex
+++ b/mproj.tex
@@ -193,6 +193,11 @@ Performance Monitor(主要负责统计各项性能数据与发送各项处理后
 \end{figure}
 \FloatBarrier
 
+其中Performance Monitor主要负责各项性能数据的统计和传输,并计算和缓存最优窃取目标节点的id,
+distributed com
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \section{性能数据收集与传输}
 数据收集包含三部分:各节点负载情况,各节点剩余任务量,各节点获取任务池任务的耗时.
 这三个参数将会为后续的最优窃取目标计算提供有力的数据支持.
