--- a/mproj.tex
+++ b/mproj.tex
@@ -165,7 +165,7 @@ Workstealing 是并行编程中的一个核心概念。
 加之集群规模的不均匀分布,这种问题变得更为严重,
 导致系统消息量过大以及“窃贼”由于多次窃取失败和网络延迟而产生的长时间饥饿状态.
 尽管关于workstealing的优化尝试从未停歇,
-例如通过建立固定的通道来匹配任务饥饿和任务丰富的节点\cite{10.1145/3016078.2851175},
+例如通过建立固定的通道来匹配任务饥饿和任务丰富的节点\cite{10.1145/2851141.2851175},
 但至今仍未有一种通用的去中心化、低开销、跨平台且高效的策略出现。
 workstealing仍处于针对各种应用环境进行持续优化的阶段。
 
@@ -402,16 +402,28 @@ Performance Monitor会通过各节点的数据计算出最优窃取目标节点,
 来减去一定的获取任务预估的损耗时间.
 最终得到的结果越大则一定程度上说明该节点越值得窃取.
 
-在遍历完所有节点后,会得到一个最优的节点目标编号索引,
+在遍历完所有节点后,一般会得到一个最优的节点目标编号索引,
 会将这个最优的节点目标编号索引数进行缓存,
 当Performance Policy需要获取最优窃取目标的$id\_type$时,
 会通过提供的查询接口,
 通过索引再去节点数组里获取最优窃取目标节点的$id\_type$,
 这样同时也保障了在hpx的$id\_type$类型无原子操作的情况下仍能保持无锁机制.
 
+在判断最优窃取目标时,我们也需要判断窃取的成本是否高过了收益,
+而这种情况往往发生在窃取过程的消耗时间大于了帮助目标节点完成任务所节省的时间,
+这种情况下score往往会小于或者等于0,
+所以设置了额外的判断条件,在score小于或者等于0的情况下不会缓存最优窃取目标.
 
-\section{刷新机制}
 
+\section{Refresh data and provide tasks mechanism}
+
+\begin{figure}[h]
+    \centering % 让图片居中显示
+    \includegraphics[width=0.98\textwidth]{images/refresh.pdf} % 插入图片，设置图片宽度为文本宽度的80%
+    \caption{refresh data and provide tasks mechanism} % 提供图片的注解
+    \label{fig:refresh_provide} % 为图片提供一个标签，以便在文档的其他地方引用
+\end{figure}
+\FloatBarrier
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
