write some part of refreshing

--- a/mproj.tex
+++ b/mproj.tex
@@ -417,6 +417,22 @@ Performance Monitor会通过各节点的数据计算出最优窃取目标节点,
 
 \section{Refresh data and provide tasks mechanism}
 
+在建立了一套从数据收集到计算最优窃取目标和缓存最优窃取目标的机制后,
+我们还需要的问题,就是以何种频率去刷新各项数据.
+虽然每一次刷新数据的开销都是相对很小的,
+但是YewPar的worker数量会尽量占满本地的计算资源,
+那么当worker繁忙时,过于频繁的刷新会导致worker的计算资源被占用,
+从而一定程度影响YewPar的性能.
+但是如果刷新的频率过低,则会导致数据的可靠性降低,
+因为数据的实时性降低,
+提供给其它节点的数据和缓存的其它节点数据都将不够准确,
+甚至可能导致窃取到其它任务饥饿的节点,加剧不均衡的情况.
+
+为解决这一问题,本文设计了一种双向动态刷新的刷新机制,
+它由两种刷新方式组成,
+一种是自动动态刷新任务方式,另一种是通过Performance Policy进行辅助刷新方式.
+大致流程如\cref{fig:refresh_provide}所示.
+
 \begin{figure}[h]
     \centering % 让图片居中显示
     \includegraphics[width=0.98\textwidth]{images/refresh.pdf} % 插入图片，设置图片宽度为文本宽度的80%
@@ -425,6 +441,57 @@ Performance Monitor会通过各节点的数据计算出最优窃取目标节点,
 \end{figure}
 \FloatBarrier
 
+在图的左侧,是在Performance Monitor中部署的自动动态刷新任务,
+它的本质上是一个循环,在每次刷新数据后都会根据刷新结果动态调整下一次刷新的时间,
+如果刷新数据的结果不理想,
+则说明当前很可能仍有worker处在饥饿的状态,
+则会大幅缩短下一次刷新的时间;
+但如果刷新数据的结果符合预期,
+则说明workers很可能都会成功获取到任务进行执行,
+所以会逐渐增加下一次刷新的时间,
+避免频繁的刷新影响worker的计算性能.
+而刷新数据的结果是否理想目前主要通过score进行判断,
+目前的算法是如果score小于等于0则说明不理想,
+因为根据\cref{eq:score}大概率是任务池任务数过少或者获取任务耗时过长导致的,
+这种情况下,很可能会导致窃取的成本高于收益,
+比如窃取时目标节点已无任务可窃取,
+或者窃取的通讯延迟时间和本地执行时间相加不如远程节点自己执行完剩余任务的时间短等.
+这里需要说明的是,虽然动态调整时间在实践中收益明显,
+但是仍需要设置上下限,
+因为如果不设置上限很可能导致由于落后的数据导致缓存了的错误窃取目标,
+而如果不设置下限则会导致频繁的刷新影响了其它仍有任务执行的worker的性能或者影响系统底层的调度,
+而如何界定这个上下限的值通过后续的多次实验,
+发现在一定范围内既能达到对系统性能影响较低,又能保障数据的相对实时性,
+而之前的通过加入了指数平滑等算法设计,
+通过一定程度保留了历史数据的影响,
+导致了数据即使有一定的延迟也能较为准确的反应各节点的综合情况.
+
+而上述设计仍有不足之处与优化的空间,
+所以还设计了如\cref{fig:refresh_provide}的右侧所示的一种通过Performance Policy进行辅助刷新的机制,
+Performance Policy的本质是获取任务的一个策略,
+它会优先获取本地的任务进行执行,
+因为如果本地有任务的话会让worker更快地获取到任务并执行,
+避免计算资源的浪费,
+但是如果本地获取不到任务,
+则会优先对Performance Monitor的最优窃取目标的id缓存进行查询,
+通过获取的id对远程对应节点的任务池进行窃取,
+这样大概率会窃取到有效的任务返回给worker进行执行,
+从而尽可能避免worker的饥饿状态,
+但是当各节点任务剩余数量都很少等情况下,
+有小概率会无法窃取到任务,
+这种在初期刚开始逐步生成任务,
+或者在各节点都快执行完任务且很少有新任务加入时的情况下会出现的较多.
+而自动刷新机制有可能此时在休眠状态无法及时调整刷新时间,
+此时被woker调用的Performance Policy就会担任辅助刷新的作用,
+主动去同步执行刷新数据的任务,
+因为一方面不刷新数据则大概率这个worker还是会处于饥饿状态,
+另一方面刷新数据时会占用这个worker的计算资源,而不会去影响其它worker,
+但是如果获取到有效的窃取目标则会给自己和其它worker都带来收益,
+当刷新数据完成后会再次尝试根据新的目标窃取一次任务,
+如果还是失败则大概率说明当前各节点都很少有任务,
+为了避免通讯等资源的占用,此时会返回空数据让这个worker进入休眠周期避免资源的占用.
+
+而在实际实践中也发现两套机制互相配合能够很好地提升系统的性能.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Evaluation}
